public/css/site.css
.form-container {
    width: 360px;
    margin: auto;
}

.failed-login {
    background-color: lightcoral;
    font-weight: bold;
}

html{
    position: relative;
    min-height: 100%;
    font-size: 14px;
}
@media (min-width: 760px){
    html {
        font-size: 16px;
    }
}

body {
    margin-bottom: 58px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    height: 58px;
    line-height: 41px;
}

.videos {
    margin-top: 80px;

}

#trend {
    margin-right: 300px;
}

#describe {
    margin-top:80px ;
    align-content: center;
    margin-left: 133px;
    margin-right: 133px;
}




@media (min-width: 992px){
    #trend {
        margin-right: 730px;
    }

    

    #view1 {
        margin-left: 10px;
    }
    #view2 {
        margin-left: 240px;
    }
}

.footer-relative {
    position: relative;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    height: 58px;
    line-height: 41px;
}

#list {
    list-style-type: square;
    margin-left: 90px;
}

#list li {
    margin: 15px;
}

#review-div {
    margin-left: 90px;
    margin-top: 50px;
    height: 250px;
    padding: 20px;
    background-color: burlywood;
}

#search-results {
    list-style-type: square;
    margin-top: 80px;
    padding: 20px;
    text-align: center;
    list-style: inside;
    width: 80%;
}

.error {
    background-color: lightcoral;
    border-color: black;
}

